--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,10 @@ Metrics/BlockLength:
   Max: 50
 Metrics/AbcSize:
   Max: 20
+Metrics/CyclomaticComplexity:
+  Max: 20
+Metrics/PerceivedComplexity:
+  Max: 20
 Layout/SpaceAroundEqualsInParameterDefault:
   EnforcedStyle: space
 Style/SymbolArray:
